--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 <body style="filter: blur(50px); -webkit-filter: blur(7rem); z-index:-3">
-    <!-- add blur: style="filter: blur(50px); -webkit-filter: blur(7rem)" -->
+    <!-- add blur: style="filter: blur(0.3vw); -webkit-filter: blur(0.3vw)" -->
     <canvas id="Accent"></canvas>
     <script src="accent.js"></script>
 </body>
