--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Random Moving Circle</title>
+    <title>Accent Background</title>
     <style>
-        body { margin: 0; overflow: hidden; background-color: #ffffff; }
-        canvas { display: block; border: 1px solid #ffffff; }
+        body { padding: 0; margin: 0; overflow: hidden; background-color: #ffffff; }
+        canvas { display: block;}
     </style>
 </head>
 <body style="filter: blur(50px); -webkit-filter: blur(7rem); z-index:-3">
