--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         canvas { display: block;}
     </style>
 </head>
-<body style="filter: blur(50px); -webkit-filter: blur(7rem); z-index:-3">
-    <!-- add blur: style="filter: blur(0.3vw); -webkit-filter: blur(0.3vw)" -->
+<body style="-webkit-filter: blur(0.3vw); filter: blur(0.3vw); z-index:-3">
     <canvas id="Accent"></canvas>
     <script src="accent.js"></script>
 </body>
